--- a/Vote_Blockchain/app/src/main/res/values/dimens.xml
+++ b/Vote_Blockchain/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="sign_in_side_margin">72dp</dimen>
+    <dimen name="categories_small_height">72dp</dimen>
+    <dimen name="category_item_text_size">14dp</dimen>
 </resources>
