--- a/VoteChain/app/src/main/res/layout/activity_categories.xml
+++ b/VoteChain/app/src/main/res/layout/activity_categories.xml
@@ -8,10 +8,15 @@
     android:padding="16dp"
     tools:context=".CategoriesActivity">
 
-    <TextView
-        android:id="@+id/categories"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/listViewCategories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/submit_vote"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="categories" />
+        android:text="@string/vote_btn_text" />
 
 </LinearLayout>
