--- a/VoteChain/app/src/main/res/layout/activity_voting.xml
+++ b/VoteChain/app/src/main/res/layout/activity_voting.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".VotingActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <RadioGroup
+        android:id="@+id/listViewVotes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/Vote1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+        <RadioButton
+            android:id="@+id/Vote2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+        <RadioButton
+            android:id="@+id/Vote3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+        <RadioButton
+            android:id="@+id/Vote4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <RadioButton
+            android:id="@+id/Vote5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+
+    </RadioGroup>
+
+
+
+
+
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Confirm Selection" />
+
+</LinearLayout>
