retaining of votes

--- a/VoteChain/app/src/main/res/layout/activity_voting.xml
+++ b/VoteChain/app/src/main/res/layout/activity_voting.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <RadioButton
             android:id="@+id/Vote1"
@@ -36,11 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
-        <RadioButton
-            android:id="@+id/Vote5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             />
 
     </RadioGroup>
 
